# object-detect-robot

./: 98-arebot.rules  README.md  history.txt  readme.txt  test2.sh  worklog.txt
others/: 98-arebot.rules
src/robot/arebot_bringup/: CMakeLists.txt  package.xml
src/robot/arebot_bringup/launch/: arebot.launch
src/robot/arebot_bringup/launch/include/lidar/: ls01b_v2.launch
src/robot/arebot_manage/arebot_bus_proto/: CMakeLists.txt  package.xml
src/robot/arebot_manage/arebot_bus_proto/include/arebot_bus_proto/: Modbus.h
src/robot/arebot_manage/arebot_bus_proto/src/: Modbus.cpp
src/robot/arebot_manage/arebot_control/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/robot/arebot_manage/arebot_control/include/arebot_control/: BotControlNode.h
src/robot/arebot_manage/arebot_control/libarebot/: CMakeLists.txt  main.cpp
src/robot/arebot_manage/arebot_control/libarebot/include/: BotControl.h  BotControlCallbacks.h  Serial.h
src/robot/arebot_manage/arebot_control/libarebot/proto/: BotRequest.proto  BotResponse.proto  CMakeLists.txt
src/robot/arebot_manage/arebot_control/libarebot/src/: BotControl.cpp  Serial.cpp
src/robot/arebot_manage/arebot_control/src/: BotControlNode.cpp  BotControlNodeCB.cpp
src/robot/arebot_manage/arebot_control/srv/: BusOp.srv
src/robot/arebot_manage/arebot_safety_controller/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/robot/arebot_manage/arebot_safety_controller/include/arebot_safety_controller/: SafetyControllerNode.h
src/robot/arebot_manage/arebot_safety_controller/src/: SafetyControllerNode.cpp
src/robot/arebot_manage/detection/: CMakeLists.txt  package.xml
src/robot/arebot_manage/detection/config/: detectnet_rosconsole.config  tags.yaml
src/robot/arebot_manage/detection/launch/: apriltag_detection.launch  detection.launch
src/robot/arebot_manage/detection/src/: apriltag_listener.py  detect.py
src/robot/arebot_navigation/: CMakeLists.txt  package.xml
src/robot/arebot_navigation/launch/: navigation.launch  navigation_toolbox.launch
src/robot/arebot_navigation/launch/include/: amcl.launch  amcl.launch.xml  move_base.launch
src/robot/arebot_navigation/maps/: map.pgm  map.yaml
src/robot/arebot_navigation/params/amcl/: amcl_params.yaml
src/robot/arebot_navigation/params/costmap/: costmap_common_params.yaml
src/robot/arebot_navigation/params/planner/: dwa_local_planner_params.yaml  global_planner_params.yaml
src/robot/arebot_navigation/rviz/: navigate.rviz
src/robot/arebot_robot/arebot_base/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/robot/arebot_robot/arebot_base/cfg/: MotorPID.cfg
src/robot/arebot_robot/arebot_base/include/arebot_base/: BaseHW.h  BaseNode.h
src/robot/arebot_robot/arebot_base/launch/: arebot_base.launch
src/robot/arebot_robot/arebot_base/params/: base.yaml  control_board.yaml  controller_manager.yaml  robot_localization_ekf.yaml  yocs_cmd_vel_mux.yaml
src/robot/arebot_robot/arebot_base/src/: BaseHW.cpp  BaseNode.cpp
src/robot/arebot_robot/robot_description/config/: joint_names_robot_description.yaml
src/robot/arebot_robot/robot_description/launch/: robot_description.launch
src/robot/arebot_robot/robot_description/meshes/: base_link.STL  camera_Link.STL  imu_Link.STL  laser_Link.STL  left wheel_Link.STL  right wheel_Link.STL  ultrasonic_Link.STL
src/robot/arebot_robot/robot_description/urdf/: robot_description.csv  robot_description.urdf
src/robot/arebot_slam/: CMakeLists.txt  package.xml
src/robot/arebot_slam/config/: frontier_exploration.yaml  karto_mapper_params.yaml  lingao_lidar_2d.lua  lingao_lidar_2d_localization.lua  lingao_lidar_2d_use_imu.lua  slam_gmapping.xml
src/robot/arebot_slam/launch/: save_map.launch  slam.launch  slam_toolbox.launch
src/robot/arebot_slam/params/: slam_hector.xml  slam_karto.xml
src/robot/arebot_slam/params/slam_toolbox/: mapper_params_online_async.yaml
src/robot/arebot_slam/rviz/: slam.rviz
src/robot/rbx2_gui/: pi_remote2.html
src/robot/rbx2_gui/js/: robot_gui.js
src/robot/rbx2_gui/launch/: rosbridge.launch
src/robot/rbx2_gui/scripts/: mini-httpd.sh
src/robot/rbx2_gui/tabs/: parameters.html
src/robot/szarbot_arm/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/robot/szarbot_arm/include/szarbot_arm/: ArmNode.h
src/robot/szarbot_arm/launch/: arm.launch
src/robot/szarbot_arm/params/: arm.yaml
src/robot/szarbot_arm/src/: ArmNode.cpp
src/sensors/laser/ls01d_driver/launch/: ls01d.launch
src/sensors/ultrasonic/szar_ultrasonic/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/sensors/ultrasonic/szar_ultrasonic/include/szar_ultrasonic/: UltrasonicNode.h
src/sensors/ultrasonic/szar_ultrasonic/launch/: ultrasonic_sensor.launch
src/sensors/ultrasonic/szar_ultrasonic/params/: sensors.yaml
src/sensors/ultrasonic/szar_ultrasonic/src/: UltrasonicNode.cpp  dynamixel_protocol.h  dynamixel_rd.c  dynamixel_rd.h
