<?xml version="1.0.0"?>
    <package format="2">
    <name>arebot_slam</name>
    <version>1.0.0</version>
    <description>The arebot_slam package</description>
    <maintainer email="picy2018@outlook.com">picy</maintainer>

    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>gmapping</exec_depend>
    <exec_depend>hector_mapping</exec_depend>   
    <exec_depend>slam_karto</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
    <exec_depend>spatio_temporal_voxel_layer</exec_depend>
    <exec_depend>move_base</exec_depend>
    <exec_depend>teb_local_planner</exec_depend>
    <exec_depend>costmap_converter</exec_depend>
    <exec_depend>laser_filters</exec_depend>
    <exec_depend>amcl</exec_depend>
    <export>
    </export>
</package>
