<?xml version="1.0"?>
<package format="2">
  <name>arebot_bus_proto</name>
  <version>0.0.0</version>
  <description>AREBot module protocol implementations</description>
  <maintainer email="gch981213@gmail.com">Chuanhong Guo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>arebot_control</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>arebot_control</build_export_depend>
</package>
