<?xml version="1.0"?>
<package format="2">
  <name>arebot_base</name>
  <version>0.0.0</version>
  <description>AREBot base controller</description>
  <maintainer email="gch981213@gmail.com">Chuanhong Guo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>arebot_bus_proto</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>arebot_bus_proto</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>arebot_safety_controller</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
